--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   <div class="container">
     <div class="heads"></div>
   </div>
+  <div class="for_btn">
+    <button class="btnStart">Старт</button>
+  </div>
 
   <script src="./script/script.js"></script>
 </body>
