--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
   </div>
   <div class="for_btn">
     <button class="btnStart">Старт</button>
+    <button class="btnStop">Стоп</button>
+    <button class="horizont">Горизонт</button>
+    <button class="vertikal">Вертикаль</button>
   </div>
 
   <script src="./script/script.js"></script>
