--- a/index.html
+++ b/index.html
@@ -11,12 +11,16 @@
 
 <body>
   <div class="container">
-    <div class="heads"></div>
+    <div class="heads kub"></div>
+    <div class="body1 kub"></div>
   </div>
   <div class="for_btn">
     <button class="btnStart">Старт</button>
     <button class="btnStop">Стоп</button>
+    <!-- <canvas id="pole" width="400" height="400"></canvas> -->
   </div>
+
+
 
   <script src="./script/script.js"></script>
 </body>
