--- a/index.html
+++ b/index.html
@@ -10,12 +10,21 @@
 </head>
 
 <body>
-  <div class="container">
-
-  </div>
-  <div class="for_btn">
-    <button class="btnStart">Старт</button>
-    <button class="btnStop">Стоп</button>
+  <div class="main">
+    <div class="left">
+      <div class="for_btn">
+        <button class="btnStart">Старт</button>
+        <button class="btnStop">Стоп</button>
+      </div>
+    </div>
+    <div class="container"></div>
+    <div class="right">
+      <label>Длина змеи: </label>
+      <label></label>
+      </br>
+      <label>Кол-во очков: </label>
+      <label></label>
+    </div>
   </div>
 
 
