--- a/index.html
+++ b/index.html
@@ -11,20 +11,24 @@
 
 <body>
   <div class="main">
+
     <div class="left">
       <div class="for_btn">
         <button class="btnStart">Старт</button>
         <button class="btnStop">Стоп</button>
       </div>
     </div>
+
     <div class="container"></div>
+
     <div class="right">
       <label>Длина змеи: </label>
-      <label></label>
+      <label class="zmi">3</label>
       </br>
       <label>Кол-во очков: </label>
-      <label></label>
+      <label class="ochKi">0</label>
     </div>
+
   </div>
 
 
