--- a/index.html
+++ b/index.html
@@ -14,18 +14,22 @@
 
     <div class="left">
       <div class="for_btn">
-        <button class="btnStart">Старт</button>
-        <button class="btnStop">Стоп</button>
+        <button class="btnStart">Start</button>
+        <button class="btnStop">Stop</button>
       </div>
     </div>
 
-    <div class="container"></div>
+    <div class="container">
+      <div class="over">
+        <h1>GAME OVER</h1>
+      </div>
+    </div>
 
     <div class="right">
-      <label>Длина змеи: </label>
+      <label>Sneke length : </label>
       <label class="zmi">3</label>
       </br>
-      <label>Кол-во очков: </label>
+      <label>Result : </label>
       <label class="ochKi">0</label>
     </div>
 
