add button continue

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div class="left">
       <div class="for_btn">
         <button class="btnStart">Start</button>
+        <button class="btnCont">Continue</button>
         <button class="btnStop">Stop</button>
       </div>
     </div>
