new font famely, disain

--- a/index.html
+++ b/index.html
@@ -6,10 +6,33 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./style/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Anton&family=Fredoka+One&display=swap" rel="stylesheet">
   <title>Змейка</title>
 </head>
 
 <body>
+  <div class="header">
+    <div class="logo">
+      <span class="hed">> *</span>
+      <span class="bod_2"></span>
+      <span class="bod_3"></span>
+      <span class="tail_2"></span>
+      <span class="tail"></span>
+    </div>
+
+    <div class="title">
+      <h2>*SNAKE*</h2>
+    </div>
+    <div class="points_snake">
+      <label>Sneke length : </label>
+      <label class="zmi">3</label>
+    </div>
+    <div class="points_result">
+      <label>Result : </label>
+      <label class="ochKi">0</label>
+    </div>
+  </div>
+
   <div class="main">
 
     <div class="left">
@@ -27,11 +50,7 @@
     </div>
 
     <div class="right">
-      <label>Sneke length : </label>
-      <label class="zmi">3</label>
-      </br>
-      <label>Result : </label>
-      <label class="ochKi">0</label>
+
     </div>
 
   </div>
