plus new disain

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="header">
     <div class="logo">
-      <span class="hed">> *</span>
+      <span class="hed"></span>
       <span class="bod_2"></span>
       <span class="bod_3"></span>
       <span class="tail_2"></span>
@@ -37,6 +37,7 @@
 
     <div class="left">
       <div class="for_btn">
+        <input type="text" id="enter" value="Name">
         <button class="btnStart">Start</button>
         <button class="btnCont">Continue</button>
         <button class="btnStop">Stop</button>
@@ -50,7 +51,51 @@
     </div>
 
     <div class="right">
-
+      <h2 class="rec">Records</h2>
+      <div class="record">
+        <table class="tabRec">
+          <tr>
+            <th>Name </th>
+            <th>Length </th>
+            <th>Score </th>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+        </table>
+      </div>
     </div>
 
   </div>
