--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./style/style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Anton&family=Fredoka+One&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:wght@700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:wght@700&family=Neucha&display=swap"
+    rel="stylesheet">
   <title>Змейка</title>
 </head>
 
@@ -45,11 +45,12 @@
     <div class="info">
       <a href="#" id="information">Info...</a>
       <div id="win">
-        <p>
-        <h3>Игра Змейка.</h3>
-        Это реинкарнация старой игры с телефонов Nokia.
-        Так что можно понастальгировать, кто хочет.
-        Ну а для меня, очередной пэт проект ;)
+        <h3 class="infoTit">Game Snake.</h3>
+        <p class="paragraf">
+          This is the reincarnation of an old
+          game from Nokia phones. So, whoever
+          wants to, can be nostalgic. Well,
+          for me, another pet project ;)
         </p>
       </div>
     </div>
@@ -77,9 +78,9 @@
       <div class="record">
         <table class="tabRec">
           <tr>
-            <th>Name </th>
-            <th>Length </th>
-            <th>Score </th>
+            <th class="namTab">Name </th>
+            <th class="lenTab">Length </th>
+            <th class="scTab">Score </th>
           </tr>
           <tr>
             <td></td>
