--- a/index.html
+++ b/index.html
@@ -12,119 +12,120 @@
 </head>
 
 <body>
-  <div class="header">
-    <div class="logo">
-      <span class="hed"></span>
-      <span class="bod_2"></span>
-      <span class="bod_3"></span>
-      <span class="tail_2"></span>
-      <span class="tail"></span>
-    </div>
-
-    <div class="title">
-      <h2 class="titleH2">*SNAKE*</h2>
-    </div>
-    <div class="points_snake">
-      <label class="lenSnake">Snake length : </label>
-      <label class="zmi">3</label>
-    </div>
-    <div class="points_result">
-      <label class="resUlt">Result : </label>
-      <label class="ochKi">0</label>
-    </div>
-    <div class="language">
-      <div class="block_ru">
-        <input type="radio" name="lang" id="ru">
-        <label id="radioLab" for="ru">RU</label>
+  <main>
+    <div class="header">
+      <div class="logo">
+        <span class="hed"></span>
+        <span class="bod_2"></span>
+        <span class="bod_3"></span>
+        <span class="tail_2"></span>
+        <span class="tail"></span>
       </div>
-      <div class="block_us">
-        <input type="radio" name="lang" id="us" checked>
-        <label id="radioLab" for="us">US</label>
-      </div>
-    </div>
-    <div class="info">
-      <a href="#" id="information">Info...</a>
-      <div id="win">
-        <h3 class="infoTit">Game Snake.</h3>
-        <p class="paragraf">
-          This is the reincarnation of an old
-          game from Nokia phones. So, whoever
-          wants to, can be nostalgic. Well,
-          for me, another pet project ;)
-        </p>
-      </div>
-    </div>
-  </div>
 
-  <div class="main">
-
-    <div class="left">
-      <div class="for_btn">
-        <input type="text" id="enter" value="Name">
-        <button class="btnStart">Start</button>
-        <button class="btnCont">Continue</button>
-        <button class="btnStop">Stop</button>
+      <div class="title">
+        <h2 class="titleH2">*SNAKE*</h2>
+      </div>
+      <div class="points_snake">
+        <label class="lenSnake">Snake length : </label>
+        <label class="zmi">3</label>
+      </div>
+      <div class="points_result">
+        <label class="resUlt">Result : </label>
+        <label class="ochKi">0</label>
+      </div>
+      <div class="language">
+        <div class="block_ru">
+          <input type="radio" name="lang" id="ru">
+          <label id="radioLab" for="ru">RU</label>
+        </div>
+        <div class="block_us">
+          <input type="radio" name="lang" id="us" checked>
+          <label id="radioLab" for="us">US</label>
+        </div>
+      </div>
+      <div class="info">
+        <a href="#" id="information">Info...</a>
+        <div id="win">
+          <h3 class="infoTit">Game Snake.</h3>
+          <p class="paragraf">
+            This is the reincarnation of an old
+            game from Nokia phones. So, whoever
+            wants to, can be nostalgic. Well,
+            for me, another pet project ;)
+          </p>
+        </div>
       </div>
     </div>
 
-    <div class="container">
-      <div class="over">
-        <h1 class="gamOv">GAME OVER</h1>
+    <div class="main">
+
+      <div class="left">
+        <div class="for_btn">
+          <input type="text" id="enter" value="Name">
+          <button class="btnStart">Start</button>
+          <button class="btnCont">Continue</button>
+          <button class="btnStop">Stop</button>
+        </div>
       </div>
-    </div>
 
-    <div class="right">
-      <h2 class="rec">Records</h2>
-      <div class="record">
-        <table class="tabRec">
-          <tr>
-            <th class="namTab">Name </th>
-            <th class="lenTab">Length </th>
-            <th class="scTab">Score </th>
-          </tr>
-          <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-          <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-          <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-          <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-          <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-          <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-          <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-        </table>
+      <div class="container">
+        <div class="over">
+          <h1 class="gamOv">GAME OVER</h1>
+        </div>
       </div>
+
+      <div class="right">
+        <h2 class="rec">Records</h2>
+        <div class="record">
+          <table class="tabRec">
+            <tr>
+              <th class="namTab">Name </th>
+              <th class="lenTab">Length </th>
+              <th class="scTab">Score </th>
+            </tr>
+            <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+          </table>
+        </div>
+      </div>
+
     </div>
+    <footer></footer>
 
-  </div>
-
-
-
+  </main>
   <script src="./script/script.js"></script>
   <script src="./script/object.js"></script>
 </body>
