making an adaptive

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <div class="main">
 
-      <div class="left">
+      <div class="left noVisivle">
         <div class="for_btn">
           <input type="text" id="enter" value="Name">
           <button class="btnStart">Start</button>
