--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </div>
       </div>
 
-      <div class="right">
+      <div class="right noVisivle">
         <h2 class="rec">Records</h2>
         <div class="record">
           <table class="tabRec">
@@ -124,10 +124,10 @@
 
     </div>
     <div class="mobail_button">
-      <a class="mobBtn" href="#">&#x25B2</a>
-      <a class="mobBtn" href="#">&#x25BA</a>
-      <a class="mobBtn" href="#">&#x25BC</a>
-      <a class="mobBtn" href="#">&#x25C4</a>
+      <a class="mobBtn" href="#" id="mBot1">&#x25C4</a>
+      <a class="mobBtn" href="#" id="mBot2">&#x25BC</a>
+      <a class="mobBtn" href="#" id="mBot3">&#x25BA</a>
+      <a class="mobBtn" href="#" id="mBot4">&#x25B2</a>
     </div>
     <footer></footer>
 
