--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <div class="main">
 
-      <div class="left noVisivle">
+      <div class="left">
         <div class="for_btn">
           <input type="text" id="enter" value="Name">
           <button class="btnStart">Start</button>
@@ -74,7 +74,7 @@
         </div>
       </div>
 
-      <div class="right noVisivle">
+      <div class="right ">
         <h2 class="rec">Records</h2>
         <div class="record">
           <table class="tabRec">
@@ -123,7 +123,7 @@
       </div>
 
     </div>
-    <div class="mobail_button">
+    <div class="mobail_button noVisible" id="block_btn">
       <a class="mobBtn" href="#" id="mBot1">&#x25C4</a>
       <a class="mobBtn" href="#" id="mBot2">&#x25BC</a>
       <a class="mobBtn" href="#" id="mBot3">&#x25BA</a>
