--- a/index.html
+++ b/index.html
@@ -132,8 +132,9 @@
     <footer></footer>
 
   </main>
-  <script src="./script/script.js"></script>
   <script src="./script/object.js"></script>
+  <script src="./script/function_module.js"></script>
+  <script src="./script/script.js"></script>
 </body>
 
 </html>
