--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./style/style.css">
+  <link rel="icon" type="image/png" sizes="16x16" href="/cherviak.png">
   <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:wght@700&family=Neucha&display=swap"
     rel="stylesheet">
   <title>Змейка</title>
