mobile buttons and menus

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h2 class="titleH2">*SNAKE*</h2>
       </div>
       <div class="points_snake">
-        <label class="lenSnake">Snake length : </label>
+        <label class="lenSnake">Length : </label>
         <label class="zmi">3</label>
       </div>
       <div class="points_result">
@@ -44,6 +44,12 @@
           <label id="radioLab" for="us">US</label>
         </div>
       </div>
+      <div class="mob_menu noVisible">
+        <a href="#" class="mMenu">&#x25BC</a>
+      </div>
+      <div class="record_mob noVisible">
+        <label class="mob_rec">vas-300</label>
+      </div>
       <div class="info">
         <a href="#" id="information">Info...</a>
         <div id="win">
@@ -58,72 +64,70 @@
       </div>
     </div>
 
-    <div class="main">
 
-      <div class="left">
-        <div class="for_btn">
-          <input type="text" id="enter" value="Name">
-          <button class="btnStart">Start</button>
-          <button class="btnCont">Continue</button>
-          <button class="btnStop">Stop</button>
-        </div>
+    <div class="left">
+      <div class="for_btn">
+        <input type="text" id="enter" value="Name">
+        <button class="btnStart">Start</button>
+        <button class="btnStop">Stop</button>
       </div>
-
-      <div class="container">
-        <div class="over">
-          <h1 class="gamOv">GAME OVER</h1>
-        </div>
-      </div>
-
-      <div class="right ">
-        <h2 class="rec">Records</h2>
-        <div class="record">
-          <table class="tabRec">
-            <tr>
-              <th class="namTab">Name </th>
-              <th class="lenTab">Length </th>
-              <th class="scTab">Score </th>
-            </tr>
-            <tr>
-              <td></td>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
-              <td></td>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
-              <td></td>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
-              <td></td>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
-              <td></td>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
-              <td></td>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
-              <td></td>
-              <td></td>
-              <td></td>
-            </tr>
-          </table>
-        </div>
-      </div>
-
     </div>
+
+    <div class="container">
+      <div class="over">
+        <h1 class="gamOv">GAME OVER</h1>
+      </div>
+    </div>
+
+    <div class="right ">
+      <h2 class="rec">Records</h2>
+      <div class="record">
+        <table class="tabRec">
+          <tr>
+            <th class="namTab">Name </th>
+            <th class="lenTab">Length </th>
+            <th class="scTab">Score </th>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+        </table>
+      </div>
+    </div>
+
+
     <div class="mobail_button noVisible" id="block_btn">
       <a class="mobBtn" href="#" id="mBot1">&#x25C4</a>
       <a class="mobBtn" href="#" id="mBot2">&#x25BC</a>
