--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
       </div>
       <div class="mob_menu noVisible">
-        <a href="#" class="mMenu">&#x25BC</a>
+        <span></span>
       </div>
       <div class="record_mob noVisible">
         <label class="mob_rec">vas-300</label>
