--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
 
 <body>
   <main>
+
+    <div class="sub_mobMenu">
+      <a class="s_menu block_m">Info..</a>
+      <a class="s_menu block_m">Records</a>
+      <input type="radio" name="lang2" id="m_ru">
+      <label for="m_ru" class="s_menu">RU</label><br>
+      <input type="radio" name="lang2" id="m_us" checked>
+      <label for="m_us" class="s_menu">US</label>
+    </div>
+
     <div class="header">
       <div class="logo">
         <span class="hed"></span>
@@ -50,6 +60,7 @@
       <div class="record_mob noVisible">
         <label class="mob_rec">vas-300</label>
       </div>
+
       <div class="info">
         <a href="#" id="information">Info...</a>
         <div id="win">
@@ -62,6 +73,7 @@
           </p>
         </div>
       </div>
+
     </div>
 
 
