finalization of adaptation

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
   <title>Змейка</title>
 </head>
 
-<body>
+<body class="telo">
   <main>
 
     <div class="sub_mobMenu">
-      <a class="s_menu block_m">Info..</a>
-      <a class="s_menu block_m">Records</a>
+      <a class="s_menu block_m" id="m_info">Information</a>
+      <a class="s_menu block_m" id="m_rec">Records</a>
       <input type="radio" name="lang2" id="m_ru">
       <label for="m_ru" class="s_menu">RU</label><br>
       <input type="radio" name="lang2" id="m_us" checked>
@@ -63,15 +63,16 @@
 
       <div class="info">
         <a href="#" id="information">Info...</a>
-        <div id="win">
-          <h3 class="infoTit">Game Snake.</h3>
-          <p class="paragraf">
-            This is the reincarnation of an old
-            game from Nokia phones. So, whoever
-            wants to, can be nostalgic. Well,
-            for me, another pet project ;)
-          </p>
-        </div>
+      </div>
+
+      <div id="win">
+        <h3 class="infoTit">Game Snake.</h3>
+        <p class="paragraf">
+          This is the reincarnation of an old
+          game from Nokia phones. So, whoever
+          wants to, can be nostalgic. Well,
+          for me, another pet project ;)
+        </p>
       </div>
 
     </div>
