--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <label id="radioLab" for="ru">RU</label>
         </div>
         <div class="block_us">
-          <input type="radio" name="lang" id="us" checked>
+          <input checked type="radio" name="lang" id="us">
           <label id="radioLab" for="us">US</label>
         </div>
       </div>
