--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
         <a href="#" id="information">Info...</a>
       </div>
 
-      <div id="win">
+      <!--! беда здесь -->
+      <!-- <div id="win noneDis">
         <h3 class="infoTit">Game Snake.</h3>
         <p class="paragraf">
           This is the reincarnation of an old
@@ -73,7 +74,7 @@
           wants to, can be nostalgic. Well,
           for me, another pet project ;)
         </p>
-      </div>
+      </div> -->
 
     </div>
 
