--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       </div>
 
       <!--! беда здесь -->
-      <!-- <div id="win noneDis">
+      <div id="win" class="noneDis">
         <h3 class="infoTit">Game Snake.</h3>
         <p class="paragraf">
           This is the reincarnation of an old
@@ -74,7 +74,7 @@
           wants to, can be nostalgic. Well,
           for me, another pet project ;)
         </p>
-      </div> -->
+      </div>
 
     </div>
 
