--- a/index.html
+++ b/index.html
@@ -36,14 +36,17 @@
       <div class="title">
         <h2 class="titleH2">*SNAKE*</h2>
       </div>
+
       <div class="points_snake">
         <label class="lenSnake">Length : </label>
         <label class="zmi">3</label>
       </div>
+
       <div class="points_result">
         <label class="resUlt">Result : </label>
         <label class="ochKi">0</label>
       </div>
+
       <div class="language">
         <div class="block_ru">
           <input type="radio" name="lang" id="ru">
@@ -54,9 +57,11 @@
           <label id="radioLab" for="us">US</label>
         </div>
       </div>
+
       <div class="mob_menu noVisible">
         <span></span>
       </div>
+
       <div class="record_mob noVisible">
         <label class="mob_rec">vas-300</label>
       </div>
@@ -66,7 +71,7 @@
       </div>
 
       <!--! беда здесь -->
-      <div id="win" class="noneDis">
+      <div id="win" class="">
         <h3 class="infoTit">Game Snake.</h3>
         <p class="paragraf">
           This is the reincarnation of an old
