--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       </div>
 
       <!--! беда здесь -->
-      <div id="win" class="">
+      <div id="win" class="wind_info">
         <h3 class="infoTit">Game Snake.</h3>
         <p class="paragraf">
           This is the reincarnation of an old
