--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
 <body class="telo">
 
-  <!--! беда здесь -->
+  <div class="shadow"></div>
+
   <div id="win" class="wind_info">
     <h3 class="infoTit">Game Snake.</h3>
     <p class="paragraf">
@@ -87,7 +88,7 @@
 
     <div class="left">
       <div class="for_btn">
-        <input type="text" id="enter" value="Name">
+        <input type="text" id="enter" placeholder="Name" value="">
         <button class="btnStart">Start</button>
         <button class="btnStop">Stop</button>
       </div>
