--- a/index.html
+++ b/index.html
@@ -150,10 +150,10 @@
 
 
     <div class="mobail_button noVisible" id="block_btn">
-      <a class="mobBtn" href="#" id="mBot1">&#x25C4</a>
-      <a class="mobBtn" href="#" id="mBot2">&#x25BC</a>
-      <a class="mobBtn" href="#" id="mBot3">&#x25BA</a>
-      <a class="mobBtn" href="#" id="mBot4">&#x25B2</a>
+      <a class="mobBtn" href="#" id="mBot1">&#8656</a>
+      <a class="mobBtn" href="#" id="mBot2">&#8659</a>
+      <a class="mobBtn" href="#" id="mBot3">&#8658</a>
+      <a class="mobBtn" href="#" id="mBot4">&#8657</a>
     </div>
 
   </main>
