--- a/index.html
+++ b/index.html
@@ -150,10 +150,10 @@
 
 
     <div class="mobail_button noVisible" id="block_btn">
-      <a class="mobBtn" href="#" id="mBot1">&#129092</a>
-      <a class="mobBtn" href="#" id="mBot2">&#129095</a>
-      <a class="mobBtn" href="#" id="mBot3">&#129094</a>
-      <a class="mobBtn" href="#" id="mBot4">&#129093</a>
+      <a class="mobBtn" href="#" id="mBot1">&#x25c4</a>
+      <a class="mobBtn" href="#" id="mBot2">&#x25bc</a>
+      <a class="mobBtn" href="#" id="mBot3">&#x25ba</a>
+      <a class="mobBtn" href="#" id="mBot4">&#x25b2</a>
     </div>
 
   </main>
