--- a/index.html
+++ b/index.html
@@ -150,10 +150,14 @@
 
 
     <div class="mobail_button noVisible" id="block_btn">
-      <a class="mobBtn" href="#" id="mBot1">&#x25c4</a>
+      <button class="mobBtn" id="mBot1">&#x25c4</button>
+      <button class="mobBtn" id="mBot2">&#x25bc</button>
+      <button class="mobBtn" id="mBot3">&#x25ba</button>
+      <button class="mobBtn" id="mBot4">&#x25b2</button>
+      <!-- <a class="mobBtn" href="#" id="mBot1">&#x25c4</a>
       <a class="mobBtn" href="#" id="mBot2">&#x25bc</a>
       <a class="mobBtn" href="#" id="mBot3">&#x25ba</a>
-      <a class="mobBtn" href="#" id="mBot4">&#x25b2</a>
+      <a class="mobBtn" href="#" id="mBot4">&#x25b2</a> -->
     </div>
 
   </main>
