--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       </div>
 
       <div class="record_mob noVisible">
-        <label class="mob_rec">vas-300</label>
+        <label class="mob_rec">-----</label>
       </div>
 
       <div class="info">
