--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
 
     <div class="header">
       <div class="logo">
+        <!-- <div class="logotip">
+          <img src="/img/logotip.png" alt="">
+        </div> -->
         <span class="hed"></span>
         <span class="bod_2"></span>
         <span class="bod_3"></span>
