--- a/index.html
+++ b/index.html
@@ -39,14 +39,7 @@
 
     <div class="header">
       <div class="logo">
-        <!-- <div class="logotip">
-          <img src="/img/logotip.png" alt="">
-        </div> -->
-        <span class="hed"></span>
-        <span class="bod_2"></span>
-        <span class="bod_3"></span>
-        <span class="tail_2"></span>
-        <span class="tail"></span>
+        <div class="logotip"></div>
       </div>
 
       <div class="title">
