fix_mobile_device

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     </div>
 
 
-    <div class="mobail_button noVisible" id="block_btn">
+    <div class="_touch noVisible" id="block_btn">
 
       <a class="mobBtn" href="#" id="mBot1">
         <svg version="1.0" xmlns="http://www.w3.org/2000/svg" class="btnLeft" viewBox="0 0 1252.000000 1280.000000"
